Replace tab icon. Add readme details. Fix shido png size. Add Osaekomi owner indication. Add leading 0 to Osaekomi timer. Remove scoring headers and align elements. Add spaces between lines where needed. Rename/refactor some code.

--- a/judoscoreboard/css/style.css
+++ b/judoscoreboard/css/style.css
@@ -63,6 +63,10 @@ body {
     font-size: 13em;
     cursor: pointer;
 }
+.osaekomi_seconds {
+    font-size: 13em;
+    cursor: pointer;
+}
 .timer_tenths {
     /* ensure this block does not affect alignment */
     width: 0;
